syntax = "proto3";

package maestro.v1;

option go_package = "github.com/maestro/maestro.go/pkg/proto;proto";

import "google/protobuf/duration.proto";

message RetryPolicy {
  int32 max_attempts = 1;
  google.protobuf.Duration initial_backoff = 2;
  google.protobuf.Duration max_backoff = 3;
  double backoff_multiplier = 4;
  repeated string retryable_status_codes = 5;
}

message CircuitBreakerConfig {
  int32 max_requests = 1;
  google.protobuf.Duration interval = 2;
  google.protobuf.Duration timeout = 3;
  int32 consecutive_failures = 4;
}

message RateLimitConfig {
  int32 requests_per_second = 1;
  int32 burst = 2;
}

message ServiceConfig {
  string name = 1;
  string type = 2;
  string endpoint = 3;
  google.protobuf.Duration timeout = 4;
  RetryPolicy retry_policy = 5;
  CircuitBreakerConfig circuit_breaker = 6;
  RateLimitConfig rate_limit = 7;
  map<string, string> metadata = 8;
}
